Se actualiza el endpoint y el readme
