# docs/swagger.json
@@ -146,10 +146,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Record Deleted",
+                    "204": {
+                        "description": "No Content",
                         "schema": {
-                            "type": "string"
+                            "type": "No"
                         }
                     },
                     "404": {
@@ -162,6 +162,30 @@
             }
         },
         "/user": {
+            "put": {
+                "description": "Actualiza la información de un registro.",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Actualiza un registro",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Agrega un nuevo registro a la base de datos.",
                 "consumes": [
@@ -226,7 +250,7 @@
         },
         "/user/login": {
             "post": {
-                "description": "Agrega un nuevo registro a la base de datos.",
+                "description": "Valida un usuari registrado.",
                 "consumes": [
                     "application/json"
                 ],
@@ -236,7 +260,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Crea un nuevo registro",
+                "summary": "Login de usuario",
                 "parameters": [
                     {
                         "description": "Información del nuevo registro",
@@ -298,30 +322,6 @@
                     }
                 }
             },
-            "put": {
-                "description": "Actualiza la información de un registro.",
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Actualiza un registro",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "delete": {
                 "description": "Realiza el borrado lógico de un registro específico.",
                 "tags": [
@@ -338,10 +338,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "User Deleted",
+                    "204": {
+                        "description": "No Content",
                         "schema": {
-                            "type": "string"
+                            "type": "No"
                         }
                     },
                     "404": {
